--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,36 @@ __pycache__/
 
 # End of https://www.gitignore.io/api/vim,xcode,linux,macos,windows,microsoftoffice,visualstudiocode
 
+
+# Archives
+
+*.7z
+*.jar
+*.rar
+*.zip
+*.gz
+*.gzip
+*.tgz
+*.bzip
+*.bzip2
+*.bz2
+*.xz
+*.lzma
+*.cab
+*.xar
+
+# Packing-only formats
+*.iso
+*.tar
+
+# # Package management formats
+*.dmg
+*.xpi
+*.gem
+*.egg
+*.deb
+*.rpm
+*.msi
+*.msm
+*.msp
+*.txz
